[package]
name = "reststop"
version = "0.1.0"
authors = ["DeltaManiac <maxpaynered@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#eframe="0.12.0"
druid = { git = "https://github.com/linebender/druid.git" }
reqwest = { version = "0.11", features = ["json","blocking"] }
